--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 
   <head>
-
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.2/cyborg/bootstrap.min.css"/>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="app.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Add a script tag to load jQuery UI javascript on the page, using Google's CDN (google: "jQuery UI google CDN"). -->
+    <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="player.js"></script>
     <script src="app.js"></script>
   </head>
