Filter method added but buggy; Play button shakes when no songs are in playlist but cannot repeat

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="player.js"></script>
     <script src="app.js"></script>
+    <link rel="stylesheet" href="animate.min.css">
   </head>
 
   <body>
@@ -22,7 +23,7 @@
         <section class="playlist col-md-6">
           <h2>Playlist</h2>
           <ul id="playlist-list"></ul>
-          <a id="play-button" href="#" class="btn btn-primary btn-block btn-lg">Play All</a>
+          <a id="play-button" href="#" class="btn btn-primary btn-block btn-lg animated">Play All</a>
         </section>
 
         <!-- Library -->
